<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Registre">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="183dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher1" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="299dp"
            android:layout_height="390dp"
            android:gravity="center|top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ingrese_su_correo"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="textPersonName"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/peso"
                android:inputType="number"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/altura"
                android:inputType="number"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/_01_01_1999"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ingrese_su_password"
                android:inputType="textPassword"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="term"
                    android:text="@string/aceptar_terminos_y_condiciones"
                    tools:ignore="LabelFor" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="274dp"
            android:layout_height="40dp"
            android:background="@drawable/bk_boton_plano"
            android:onClick="return0"
            android:text="@string/enviar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>