<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Reminder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="189dp"
            android:layout_height="143dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher1" />

        <LinearLayout
            android:layout_width="332dp"
            android:layout_height="193dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.532">

            <EditText
                android:id="@+id/editNameMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name_of_the_medicine"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bk_boton_plano1"
                    android:text="@string/fecha" />

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="date"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bk_boton_plano1"
                    android:text="@string/hora" />

                <EditText
                    android:id="@+id/editTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="date"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="159dp"
            android:layout_height="147dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonMas"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/bk_boton_mas"
                android:text="@string/buttonMas"
                android:textColor="@android:color/white"
                android:textSize="40sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="160dp"
                android:layout_height="38dp"
                android:background="@drawable/bk_boton_plano1"
                android:baselineAligned="false"
                android:onClick="returnn"
                android:text="@string/return0"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center|center_vertical"
            android:text="@string/alarm"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>